# powdr-template

./: Cargo.toml  README.md
guest/: Cargo.toml
src/: main.rs
